[package]
name = "hyperwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
json_serializer = ["serde_json"]
msgpack_serializer = ["rmp-serde"]
protobuf_serializer = ["protobuf"]

[dependencies]
thiserror = "1.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "^1.3"
serde_json = { version = "^1.0", optional = true }
rmp-serde = { version = "^1.1", optional = true }
protobuf = { version = "^3.1", optional = true }

[workspace]
members = ["hyperwasm-test",]